fix video thumbnail align

--- a/components/EmbeddedVideo/EmbeddedVideo.module.css
+++ b/components/EmbeddedVideo/EmbeddedVideo.module.css
@@ -38,6 +38,11 @@
   }
 }
 
+.image {
+  width: 100%;
+  height: 100%;
+}
+
 .icon {
   @media (max-width: $mantine-breakpoint-sm) {
     height: 3rem;
